--- a/Navigation/params/global_costmap_params.yaml
+++ b/Navigation/params/global_costmap_params.yaml
@@ -1,10 +1,16 @@
 global_costmap:
 	global_frame: /map
 	robot_base_frame: base_link
-	update_frequency: 5.0
+	update_frequency: 20.0
 	publish_frequency: 5.0
 	static_map: false
+	rolling_window:false
+	width: 20
+	height: 20
+	resolution: .05
+	origin_x: -10
+	origin_y: -10
+	
 	
 
- -plugins:
- 	- {name: static_layer, type: "rtabmap_ros::StaticLayer"}
+ 
